--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
 # 환경파일 무시
 .env
+venv/
 # 캐시 디렉터리 무시
 __pycache__/
+*.py[cod]
 # 파이썬 bytecode
 *.pyc
 # vs code
 .vscode/
 # db
 *.db
+*.sqlite3
+.ipynb_checkpoints/
+*.logs
